<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:orientation="vertical"
    tools:context=".Filter">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_grp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_trending"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:chipBackgroundColor="@color/chipColor"
            android:text="@string/trending"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_full_time"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:chipBackgroundColor="@color/chipColor"
            android:text="@string/full_time"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_internship"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:chipBackgroundColor="@color/chipColor"
            android:text="@string/internship"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_online_interview"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:chipBackgroundColor="@color/chipColor"
            android:text="@string/online_interview"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_personal_interview"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:chipBackgroundColor="@color/chipColor"
            android:text="@string/personal_interview"/>
    </com.google.android.material.chip.ChipGroup>

    <LinearLayout
        android:id="@+id/layout_spinner_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Spinner
            android:layout_weight="1"
            android:id="@+id/spinner_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Spinner
            android:layout_weight="1"
            android:id="@+id/spinner_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_spinner_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Spinner
            android:layout_weight="1"
            android:id="@+id/spinner_college"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Spinner
            android:layout_weight="1"
            android:id="@+id/spinner_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_view_ques"
        android:layout_marginTop="10dp"
       />

</LinearLayout>